Adding config params that can be over-ridden through yinst